# 11labshack

./: .env.example  .gitignore  Makefile  README.md  mcp.example.json  pyproject.toml  requirements.txt
.serena/: project.yml
app/: config.py  db.py  main.py  models.py  pyproject.toml
app/data/: agents.json
app/routers/: agents.py  audio.py  interviews.py  reports.py
app/services/: elevenlabs_service.py  llm_service.py
docs/: data_model.md  epics_stories.md  hackathon-description.md  n8n_self_correcting_agent.md  prd.md
docs/stories/: workflow_generate_reports.md  workflow_orchestrate_debates.md  workflow_run_debate_loop.md  workflow_setup_agents.md  workflow_testing_strategies.md
n8n/: docker-compose.yml
n8n/local-files/: supabase_setup.sql
n8n/scripts/: clean_import.py  delete_workflows.py
n8n/testing/: README.md
n8n/workflows/: 0.1_generate_audio_simple.json  1.0_generate_personas.json  1.0_run_migrations.json  1.1_create_topic_profile.json
n8n/workflows/utility/: clean_db.json
